--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                                     </select>
                                 </div>
 
-                    <button type="submit " class="btn btn-primary" onclick="createR()">Guardar</button>
-                    <button type="reset " class="btn btn-secondary" onclick="resetFields()">Borrar</button>
+                    <button type="submit " class="btn btn-primary" onclick="agregar()">Guardar</button>
+                    <button type="reset " class="btn btn-secondary" onclick="borrar()">Borrar</button>
                     </form>
                 </div>
                     <div class="col-md-8">
